--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-# Include your project-specific ignores in this file
-# Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
+lib-cov
+*.seed
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+.DS_Store
+
+pids
+logs
+
+node_modules
+public
+npm-debug.log
