--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   },
   "dependencies": {
     "javascript-brunch": "~1.7.0",
-    "stylus-brunch": "1.6.1",
     "css-brunch": ">= 1.0 < 1.8",
     "uglify-js-brunch": "~1.7.3",
     "imageoptmizer-brunch": "0.0.4",
     "clean-css-brunch": "~1.7.1",
     "jshint-brunch": "1.7.0",
-    "auto-reload-brunch": "<=1.5"
+    "auto-reload-brunch": "<=1.5",
+    "jade-brunch": "~1.7.3",
+    "static-jade-brunch": "~1.7.0",
+    "less-brunch": "~1.7.1"
   },
   "devDependencies": {}
 }
